--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1370,7 +1370,8 @@ body.page-template .post-title {
     border-radius: 100%;
 }
 
-.author-profile .author-image {
+.author-profile .author-image,
+.main-header-content .author-image {
     position: relative;
     left: auto;
     top: auto;
@@ -1379,6 +1380,10 @@ body.page-template .post-title {
     padding: 3px;
     margin: -100px auto 0 auto;
     box-shadow: none;
+}
+
+.main-header-content .author-image {
+    margin-top: 0;
 }
 
 .author-title {
@@ -1767,7 +1772,7 @@ body.page-template .post-title {
         height: auto;
         min-height: 240px;
         height: 60vh;
-        padding: 15% 0;
+        padding: 10% 0;
     }
 
     .scroll-down,
