--- a/index.hbs
+++ b/index.hbs
@@ -11,6 +11,9 @@
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
+            <figure class="author-image">
+                <div class="img" style="background-image: url(//www.gravatar.com/avatar/3ab39057319da4733d14635fa3f327a6?s=250&d=mm&r=x)"><span class="hidden">Gabor Javorszky's Picture</span></div>
+            </figure>
             <h1 class="page-title">{{@blog.title}}</h1>
             <h2 class="page-description">{{@blog.description}}</h2>
         </div>
