--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -13,10 +13,7 @@
         <p>{{excerpt words="26"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
     </section>
     <footer class="post-meta">
-        {{author}}
-        {{tags}}
-
-        <time class="post-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>
+        <time class="post-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>{{tags}}
     </footer>
 </article>
 {{/foreach}}
