Minified CSS, minified and inlined javascript

--- a/default.hbs
+++ b/default.hbs
@@ -18,7 +18,7 @@
 
     {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
-    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.min.css"}}" />
 
 
     {{!-- Ghost outputs important style and meta data with this tag --}}
@@ -49,7 +49,9 @@
     {{!-- Fitvids makes video embeds responsive and awesome --}}
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     {{!-- The main JavaScript file for Casper --}}
-    <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
+    <script type="text/javascript">
+    (function($,undefined){"use strict";var $document=$(document);$document.ready(function(){var $postContent=$(".post-content");$postContent.fitVids();$(".scroll-down").arctic_scroll();$(".menu-button, .nav-cover, .nav-close").on("click",function(e){e.preventDefault();$("body").toggleClass("nav-opened nav-closed")})});$.fn.arctic_scroll=function(options){var defaults={elem:$(this),speed:500},allOptions=$.extend(defaults,options);allOptions.elem.click(function(event){event.preventDefault();var $this=$(this),$htmlBody=$('html, body'),offset=($this.attr('data-offset'))?$this.attr('data-offset'):!1,position=($this.attr('data-position'))?$this.attr('data-position'):!1,toMove;if(offset){toMove=parseInt(offset);$htmlBody.stop(!0,!1).animate({scrollTop:($(this.hash).offset().top+toMove)},allOptions.speed)}else if(position){toMove=parseInt(position);$htmlBody.stop(!0,!1).animate({scrollTop:toMove},allOptions.speed)}else{$htmlBody.stop(!0,!1).animate({scrollTop:($(this.hash).offset().top)},allOptions.speed)}})}})(jQuery)
+    </script>
 
 </body>
 </html>
